#159: compression codec setup cleaned up a bit